<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_MTeamLeaderHome"
            android:icon="@drawable/final_home_icon"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_allocate"
            android:icon="@drawable/final_allocate_req"
            android:title="@string/menu_allocate"
            />
        <item
            android:id="@+id/nav_mainteamleader_gethelp"
            android:icon="@drawable/final_get_help"
            android:title="@string/menu_madmin_gethelp"
            />
        <item
            android:id="@+id/nav_teamleaderreport"
            android:icon="@drawable/final_mreport_icon"
            android:title="@string/menu_teamleader_report"
            />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/final_help_icon"
            android:title="Help"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"
            />
    </group>

</menu>