<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_AirportAdminHome"
            android:icon="@drawable/final_home_icon"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_adddept"
            android:icon="@drawable/final_adddept_icon"
            android:title="@string/menu_adddept"
            />

        <item
            android:id="@+id/nav_reportofdepts"
            android:icon="@drawable/final_mreport_icon"
            android:title="@string/menu_reportofdepts"
            />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/final_help_icon"
            android:title="Help"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"
            />
    </group>

</menu>