<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_DeptHeadHome"
            android:icon="@drawable/final_home_icon"
            android:title="department head"
            />
        <item
            android:id="@+id/nav_addstaff"
            android:icon="@drawable/final_add_staff"
            android:title="@string/menu_addstaff"
            />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/final_mreport_icon"
            android:title="@string/menu_report"
            />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/final_help_icon"
            android:title="Help"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout"
            />
    </group>
</menu>